--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/cdelauder/node_sample/issues"
   },
-  "homepage": "https://github.com/cdelauder/node_sample"
+  "homepage": "https://github.com/cdelauder/node_sample",
+  "dependencies": {
+    "express": "^4.13.0"
+  }
 }
