--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample node CRUD application for the workshop on 6/25",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/cdelauder/node_sample",
   "dependencies": {
-    "express": "^4.13.0"
+    "express": "^4.13.0",
+    "nodemon": "^1.3.7"
   }
 }
