--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/cdelauder/node_sample",
   "dependencies": {
     "express": "^4.13.0",
+    "jade": "^1.11.0",
+    "mongo": "^0.1.0",
     "nodemon": "^1.3.7"
   }
 }
