--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cdelauder/node_sample",
   "dependencies": {
+    "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "jade": "^1.11.0",
     "mongo": "^0.1.0",
